# cmockery

./: ChangeLog  Doxyfile  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac
lib/: config.h.in
tests/: calculator_test.c
